# erlconnect

./: .gitignore  CMakeLists.txt  README.md  erlconnect.cpp
cmake/: FindErlang.cmake
erl/: bws_call_logic.erl  bws_call_logic_test.erl  run.sh  testserver.erl
src/: erlconnect.cpp  erlconnect.h
test/: testconnect.cpp
